Refactoring & bugfixes
FilmStorage & GenreStorage & MpaStorage & UserStorage - были перемещены в /storage/function/ для большей удобности и читаемости.